header alignment fixed along with mobile toggle

--- a/app/globals.css
+++ b/app/globals.css
@@ -120,17 +120,21 @@ header {
 nav {
   display: flex;
   align-items: center;
+
   ul {
     display: flex;
     list-style-type: none;
     gap: 10px;
+
     li {
       display: inline-block;
+
       a {
         display: inline-block;
         padding: 10px 20px;
         color: #0e0e0c;
         font-weight: 600;
+
         &:hover {
           background-color: #0e0e0c;
           border: white 2px solid;
@@ -141,10 +145,12 @@ nav {
       }
     }
   }
+
   .mobile-toggle {
     display: none;
-    color: var(--base-100);
+    color: var(--base-800);
     padding: 10px;
+
     @media (max-width: 768px) {
       display: inline-block;
       position: absolute;
@@ -153,6 +159,44 @@ nav {
     }
   }
 }
+
+@media (max-width: 1024px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  nav {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 768px) {
+  nav {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+    width: 100%;
+
+    ul {
+      display: none;
+
+      a {
+        width: 100%;
+      }
+
+      &.active {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+      }
+    }
+  }
+}
+
+
 
 .container {
   max-width: 1440px;
@@ -239,7 +283,7 @@ h1 {
     justify-content: center;
     span {
       @media (max-width: 1024px) {
-        display: none;
+        font-size: 35px
       }
     }
     .call-to-action {
